# solar-data-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  notes.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  test-build.yml  test.yml
docs/source/: conf.py
pvsystemprofiler/: estimator.py  tilt_azimuth_study.py
pvsystemprofiler/algorithms/: optimized_sunrise_sunset.py
sdt_dask/clients/: clients.py  local.py
sdt_dask/dask_tool/: sdt_dask.py
sdt_dask/dataplugs/: S3Bucket_plug.py  csv_plug.py  dataplug.py  pvdaq_plug.py  pvdb_plug.py
sdt_dask/examples/: fargate_example_script.py  rev_far_base_dask.py  rev_loc_base_dask.py  tool_demo_local_pvdaq.ipynb
solardatatools/: _cvx_signal_decompositions.py  _osd_signal_decompositions.py  clear_day_detection.py  clear_time_labeling.py  data_filling.py  data_handler.py  data_quality.py  dataio.py  daytime.py  matrix_embedding.py  model_soiling.py  plotting.py  polar_transform.py  pvpro_post_processing.py  sensor_identification.py  signal_decompositions.py  solar_noon.py  sunrise_sunset.py  time_axis_manipulation.py  utilities.py
solardatatools/algorithms/: capacity_change.py  clipping.py  sunrise_sunset_estimation.py  time_shifts.py
statistical_clear_sky/: dataviewer.py
statistical_clear_sky/algorithm/: iterative_fitting.py
statistical_clear_sky/utilities/: data_loading.py  filters.py
tests/: conftest.py
tests/pvsystemprofiler/: test_calculate_longitude.py  test_equation_of_time.py  test_estimate_latitude.py  test_fit_azimuth.py  test_fit_longitude.py  test_fit_tilt.py
(+35 files in other folders)
