[tool.poetry]
name = "solar-data-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
dask = "^2024.4.1"
numpy = "^1.26.4"
cvxpy = "^1.4.3"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scipy = "^1.13.0"
boto3 = "^1.34.87"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
uv = "^0.1.34"
mypy = "^1.9.0"
pytest = "^8.1.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
